# stem-splitter-telegram-bot

./: .gitignore  Dockerfile  docker-compose.yml  download_mp3.py  jobs.py  main.py  pyproject.toml  requirements.txt
bot/: Dockerfile  db.py  main.py
db/: init.sql
demucs/: Dockerfile  demucs-watch.sh  requirements.txt
