[project]
name = "stem-splitter-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "demucs>=4.0.1",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "torchcodec>=0.14.0",
]
